# qrl_chain_scrape

./: .gitattributes  .gitignore  LICENSE  README.md  config.ini  database_test.py  logging_config.py  makefile  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: coadacy-workflow.yml  pytest-workflow.yml  todo-to-issue-workflow.yml  workflow.yml
src/: __init__.py  config.ini.example  config.py  core.py  database_test.py
src/chainfunctions/: __init__.py  address.py  block.py
src/core/: __init__.py  config.py  functions.py
src/db/: __init__.py  dbhelper.py
src/price/: __init__.py  coingecko.py  coingecko_price_scrape_v1.py  coinlist.json  fullcoinlist.json
src/qrl-chain-scrape/: __init__.py  _version.py  block.py
src/qrl-chain-scrape/chain-functions/: block.py
src/qrl-chain-scrape/db/: dbhelper.py
src/qrl_chain_scrape/: __init__.py  core.py  loggingconf.py
src/qrl_chain_scrape/chainfunctions/: address.py
src/qrl_chain_scrape/price/: coingecko_price_scrape_v1.py
tests/: address_test.py  block_test.py  coingecko_test.py  config_test.py  context.py  dbhelper_test.py
