[metadata]
name = qrl_chain_scrape
version = 0.1.0


[options]
packages = qrl_chain_scrape

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/_version.py
versionfile_build = src/_version.py
tag_prefix =
parentdir_prefix = qrl_chain_scrape-
