[metadata]
name = qrl_chain_scrape
version = 0.1.0


[options]
#packages = qrl_chain_scrape
packages = find: 
inculde_package_data = true 
package_dir = 
    =src

[options.packages.find]
where = src
include = qrl_chain_scrape

[options.entry_points]
console_scripts =
    qrl_chain_scrape = qrl_chain_scrape:main

[options.package_data]
qrl_chain_scrape = py.typed


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/_version.py
versionfile_build = qrl_chain_scrape/_version.py
tag_prefix = v
#parentdir_prefix = qrl_chain_scrape-
